Add /login and /logout endpoint

--- a/src/resources/lang/errors.json
+++ b/src/resources/lang/errors.json
@@ -5,7 +5,7 @@
   "accessTokenExpired": "Access token expired.",
   "noToken": "No token in authorization header.",
   "sessionNotMaintained": "Session not maintained.",
-  "refreshTokenExpired": "Session not maintained.",
+  "refreshTokenExpired": "Session has been expired.",
   "portRequirePrivilege": "Port requires elevated privileges.",
   "unAuthorized": "You are not authorized to perform this action."
 }
