--- a/src/resources/lang/messages.json
+++ b/src/resources/lang/messages.json
@@ -1,6 +1,8 @@
 {
   "auth": {
     "loginSuccess": "Login successful.",
+    "resetSuccess": "Password reset request successful.",
+    "forgotSuccess": "Forgot password request successful. Check email.",
     "logoutSuccess": "Logout successful.",
     "invalidCredentials": "Invalid Credentials",
     "accessTokenRefreshed": "Access token refreshed successfully."
