--- a/src/resources/lang/errors.json
+++ b/src/resources/lang/errors.json
@@ -7,6 +7,7 @@
   "noToken": "No token in authorization header.",
   "sessionNotMaintained": "Session not maintained.",
   "refreshTokenExpired": "Session has been expired.",
+  "verificationTokenExpired": "Verification token expired.",
   "portRequirePrivilege": "Port requires elevated privileges.",
   "unAuthorized": "You are not authorized to perform this action."
 }
